# XAuthenticator

./: ACCOUNT_MANAGEMENT.md  Cargo.toml  KDBX_CRUD_IMPLEMENTATION.md  LICENSE  README.md  README_English.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.js  vite.config.ts
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/entity/: Cargo.toml
crates/entity/src/: account.rs  lib.rs  meta.rs
crates/error/: Cargo.toml
crates/error/src/: lib.rs
crates/kdbx/: Cargo.toml
crates/migration/: Cargo.toml
crates/migration/src/: m20251011_150151_create_table_meta.rs
crates/repository/src/: account.rs
plugins/config/src/: lib.rs
plugins/entity/: Cargo.toml
plugins/entity/src/: account.rs  lib.rs  meta.rs
plugins/migration/: Cargo.toml
plugins/migration/src/: lib.rs  m20251011_150141_create_table_accounts.rs  main.rs
plugins/repository/: Cargo.toml
plugins/repository/src/: account.rs
src/: app.css  app.d.ts  app.html
src-tauri/: Cargo.toml  Info.ios.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/resources/migrations/: 001_init.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: accounts.rs  mod.rs
src-tauri/src/constants/: mod.rs  webview_window.rs  webview_window_labels.rs
src-tauri/src/initialize/: mod.rs
src-tauri/src/state/: mod.rs
src-tauri/src/utils/: app_data_dir.rs  check_file_exists.rs  crypto.rs  kdf.rs  mod.rs  parse_otpauth.rs
src/lib/: utils.ts
src/lib/api/: api.ts  errors.ts  types.ts
src/lib/assets/launch/: 1845852.avif  5742416.avif  6496937.avif  6834164.avif  7899206.avif  8258264.avif  9059825.avif
src/lib/components/: AccountDialog.svelte  AccountList.svelte  AddAccountDialog.svelte  DeleteConfirmDialog.svelte  EditAccountDialog.svelte  account-dialog.svelte
src/lib/components/app-settings/: app-settings.svelte
src/lib/components/app-sheet/: app-sheet.svelte
src/lib/components/layout/: app-layout.svelte  app-lock-layout.svelte  app-sidebar.svelte  titlebar.svelte
src/lib/components/ui/accordion/: accordion-content.svelte  accordion-item.svelte  accordion-trigger.svelte  accordion.svelte
src/lib/components/ui/alert/: alert-description.svelte  alert-title.svelte  alert.svelte
src/lib/components/ui/alert-dialog/: alert-dialog-action.svelte  alert-dialog-cancel.svelte  alert-dialog-content.svelte  alert-dialog-description.svelte  alert-dialog-footer.svelte  alert-dialog-header.svelte  alert-dialog-overlay.svelte  alert-dialog-title.svelte  alert-dialog-trigger.svelte  index.ts
src/lib/components/ui/aspect-ratio/: aspect-ratio.svelte
src/lib/components/ui/avatar/: avatar-fallback.svelte  avatar-image.svelte  avatar.svelte
src/lib/components/ui/badge/: badge.svelte
src/lib/components/ui/breadcrumb/: breadcrumb-ellipsis.svelte  breadcrumb-item.svelte  breadcrumb-link.svelte  breadcrumb-list.svelte  breadcrumb-page.svelte  breadcrumb-separator.svelte  breadcrumb.svelte
src/lib/components/ui/button/: button.svelte
src/lib/components/ui/button-group/: button-group-separator.svelte  button-group-text.svelte  button-group.svelte
src/lib/components/ui/calendar/: calendar-caption.svelte  calendar-cell.svelte  calendar-day.svelte  calendar-grid-body.svelte  calendar-grid-head.svelte  calendar-grid-row.svelte  calendar-grid.svelte  calendar-head-cell.svelte  calendar-header.svelte  calendar-heading.svelte  calendar-month-select.svelte  calendar-month.svelte  calendar-months.svelte  calendar-next-button.svelte  calendar-prev-button.svelte  calendar-year-select.svelte  calendar.svelte
src/lib/components/ui/card/: card-action.svelte  card-content.svelte  card-description.svelte  card-footer.svelte  card-header.svelte  card-title.svelte  card.svelte
src/lib/components/ui/carousel/: carousel-content.svelte  carousel-item.svelte  carousel-next.svelte  carousel-previous.svelte  carousel.svelte  context.ts
src/lib/components/ui/chart/: chart-container.svelte  chart-style.svelte  chart-tooltip.svelte  chart-utils.ts
src/lib/components/ui/checkbox/: checkbox.svelte
src/lib/components/ui/collapsible/: collapsible-content.svelte  collapsible-trigger.svelte  collapsible.svelte
src/lib/components/ui/command/: command-dialog.svelte  command-empty.svelte  command-group.svelte  command-input.svelte  command-item.svelte  command-link-item.svelte  command-list.svelte  command-separator.svelte  command-shortcut.svelte  command.svelte
src/lib/components/ui/context-menu/: context-menu-checkbox-item.svelte  context-menu-content.svelte  context-menu-group-heading.svelte  context-menu-group.svelte  context-menu-item.svelte  context-menu-label.svelte  context-menu-radio-group.svelte  context-menu-radio-item.svelte  context-menu-separator.svelte  context-menu-shortcut.svelte  context-menu-sub-content.svelte  context-menu-sub-trigger.svelte  context-menu-trigger.svelte  index.ts
src/lib/components/ui/data-table/: data-table.svelte.ts  flex-render.svelte  render-helpers.ts
src/lib/components/ui/dialog/: dialog-close.svelte  dialog-content.svelte  dialog-description.svelte  dialog-footer.svelte  dialog-header.svelte  dialog-overlay.svelte  dialog-title.svelte  dialog-trigger.svelte  index.ts
src/lib/components/ui/drawer/: drawer-close.svelte  drawer-content.svelte  drawer-description.svelte  drawer-footer.svelte  drawer-header.svelte  drawer-overlay.svelte  drawer-title.svelte  drawer-trigger.svelte  index.ts
src/lib/constants/: index.ts  webview-window-labels.ts
src/lib/hooks/: is-mobile.svelte.ts
src/lib/i18n/: index.ts
src/lib/i18n/locales/: en.json  zh.json
src/lib/initialize/: index.ts
src/lib/stores/: app-settings.ts  app-sheet.ts  app-window.ts  stores.ts
src/lib/tray/: index.ts
src/lib/window/: index.ts
src/routes/: +layout.svelte  +layout.ts
src/routes/(app)/: +layout.svelte  +layout.ts  +page.svelte
src/routes/initialization/: +page.svelte  +page.ts
src/routes/launch/: +page.svelte
src/routes/settings/: +layout.svelte  +page.svelte
(+189 files in other folders)
