[workspace]
resolver = "2"
members = ["src-tauri", "plugins/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Fynn Tang <fzpying@gmail.com>"]
repository = "https://github.com/fynntang/XAuthenticator.git"
description = "A modern, secure and easy-to-use two-factor authentication (2FA) management tool"


[workspace.dependencies]
xauthenticator-config = { path = "plugins/config" }
xauthenticator-entity = { path = "plugins/entity" }
xauthenticator-migration = { path = "plugins/migration" }
xauthenticator-repository = { path = "plugins/repository" }

chrono = "0.4"
tokio = { version = "1", features = ["full"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1.18", features = ["v7"] }
rand = "0.9"
rand_core = "0.9"
sea-orm = { version = "2.0.0-rc", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
    "with-chrono",
    "with-time",
    "with-json",
    "debug-print",
] }
sea-orm-cli = { version = "2.0.0-rc" }

# default to small, optimized release binaries
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
