[workspace]
resolver = "2"
members = ["src-tauri", "crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Fynn Tang <fzpying@gmail.com>"]
repository = "https://github.com/fynntang/XAuthenticator.git"
description = "A modern, secure and easy-to-use two-factor authentication (2FA) management tool"


[workspace.dependencies]
xauthenticator-config = { path = "crates/config" }
xauthenticator-entity = { path = "crates/entity" }
xauthenticator-error = { path = "crates/error" }
xauthenticator-migration = { path = "crates/migration" }
xauthenticator-repository = { path = "crates/repository" }

chrono = "0.4"
tokio = { version = "1", features = ["full"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1.18", features = ["v7"] }
rand = "0.9"
rand_core = "0.9"
sea-orm = { version = "2.0.0-rc.18", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
    "with-chrono",
    "with-time",
    "with-json",
    "debug-print",
] }
sea-orm-cli = "2.0.0-rc"
tempdir = "0"
tempfile = "3"
thiserror = "2"
anyhow = "1"
chacha20poly1305 = "0"
getrandom = "0"
generic-array = { version = "1", features = [ "serde", "zeroize" ] }
argon2 = "0.5"
sha2 = "0.10"

# default to small, optimized release binaries
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
