[package]
name = "xauthenticator-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true

[lib]
name = "xauthenticator_config"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
log = { workspace = true }