[package]
name = "xauthenticator-entity"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
description = { workspace = true }

[lib]
name = "xauthenticator_entity"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
