[package]
name = "xpassword-entity"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
description = { workspace = true }

[lib]
name = "xpassword_entity"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
