[package]
name = "xauthenticator-error"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
[lib]
name = "xauthenticator_error"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
