[package]
name = "xauthenticator-repository"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
description = { workspace = true }

[lib]
name = "xauthenticator_repository"
path = "src/lib.rs"


[dependencies]
xauthenticator-entity = { workspace = true }
xauthenticator-error = { workspace = true }

sea-orm = { workspace = true }
log = { workspace = true }
